# Kung-Fu-Chess

./: .gitignore  ARCHITECTURE.md  Board.cpp  Board.h  Board.hpp  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CommandProcessor.cpp  CommandProcessor.h  CommandProcessor.hpp  GameState.cpp  GameState.h  Piece.cpp  Piece.h  main.cpp
Controller/: BoardMapper.cpp  BoardMapper.h  Controller.cpp  Controller.h
Engine/: GameEngine.cpp  GameEngine.h  RealTimeArbiter.cpp  RealTimeArbiter.h
IO/: BoardParser.cpp  BoardParser.h  BoardPrinter.h  CommandProcessor.cpp  CommandProcessor.h
client/: CMakeLists.txt
client/src/: main.cpp
client/src/cli/: CliShell.cpp  CliShell.h
client/src/network/: WebSocketClient.cpp  WebSocketClient.h
common/DTO/: MoveValidation.h
common/enums/: MoveValidationReason.h  PieceState.h  PieceType.h
model/: Board.cpp  Board.h  GameState.cpp  GameState.h  Jump.cpp  Jump.h  Motion.cpp  Motion.h  Piece.cpp  Piece.h  PieceColor.h  Position.cpp  Position.h
protocol/: CMakeLists.txt
protocol/include/protocol/: Message.h  MessageType.h
rules/: BishopRule.cpp  BishopRule.h  IMovementRule.h  KingRule.cpp  KingRule.h  PawnRule.cpp  PawnRule.h  QueenRule.h  RookRule.cpp  RookRule.h  RuleEngine.cpp  RuleEngine.h
server/: CMakeLists.txt
server/src/: main.cpp
server/src/handlers/: AuthRequestHandler.cpp  AuthRequestHandler.h
server/src/network/: WebSocketServer.cpp  WebSocketServer.h
server/src/persistence/: Database.cpp  Database.h  UserRecord.h  UserRepository.cpp  UserRepository.h
server/src/services/: AuthService.cpp  AuthService.h
server/tests/: auth_service_test.cpp  test_main.cpp  user_repository_test.cpp
src/: main.cpp
src/UI/: AnimationFrame.cpp  AnimationFrame.h  BoardCanvas.cpp  BoardCanvas.h  CoordinateConverter.cpp  CoordinateConverter.h  GameLoop.cpp  GameLoop.h  PixelPosition.cpp  PixelPosition.h  Renderer.cpp  Renderer.h  SpriteManager.cpp  SpriteManager.h  img.cpp  img.h
src/common/: PixelPosition.cpp  PixelPosition.h  TimeProgress.h
src/common/DTO/: BoardView.cpp  BoardView.h  GameView.cpp  GameView.h  JumpView.cpp  JumpView.h  MotionView.cpp  MotionView.h  PieceView.cpp  PieceView.h  PositionView.cpp  PositionView.h  RestView.cpp  RestView.h
src/common/enums/: MoveValidationReason.h  PieceState.h  PieceStateToString.h  RestKind.h
src/logic/Controller/: BoardMapper.cpp  BoardMapper.h  Controller.cpp  Controller.h  RealTimeArbiter.cpp  RealTimeArbiter.h
src/logic/Engine/: GameEngine.cpp  GameEngine.h
src/logic/IO/: BoardParser.cpp  BoardPrinter.cpp  CommandProcessor.cpp  GameFactory.cpp  GameFactory.h
src/logic/model/: Board.cpp  Board.h  GameState.h  Jump.cpp  Motion.h  Piece.h  Position.cpp  Rest.cpp  Rest.h
src/logic/rules/: KnightRule.cpp  KnightRule.h  PawnRule.cpp  PawnRule.h  QueenRule.cpp  RookRule.cpp  RookRule.h  RuleEngine.h
src/tests/: main.cpp  test_board.cpp  test_piece.cpp
src/tests/common_tests/: piece_state_to_string_test.cpp  time_progress_test.cpp
src/tests/logic_tests/controller/: board_mapper_test.cpp  controller_test.cpp  real_time_arbiter_test.cpp
src/tests/logic_tests/engine/: game_engine_test.cpp
src/tests/logic_tests/io/: board_parser_test.cpp  board_printer_test.cpp  command_processor_test.cpp
src/tests/logic_tests/model/: board_test.cpp  game_state_test.cpp  jump_test.cpp  motion_test.cpp  piece_test.cpp  position_test.cpp  rest_test.cpp
src/tests/logic_tests/rules/: rule_engine_test.cpp  rules_test.cpp
tests/: test_board.cpp  test_gamestate.cpp  test_piece.cpp
